--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -2,4 +2,4 @@
 #
 # These owners will be the default owners for everything in
 # the repo, unless a later match takes precedence.
-* kaoru@soracom.jp moto@soracom.jp
+* katayama@soracom.jp moto@soracom.jp
